<resources>
    <string name="app_name">U Speak We Pay</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="field_name">Name</string>
    <string name="field_sex">Sex</string>
    <string name="field_age">Age</string>
    <string name="field_native_district">Native District</string>
    <string name="field_phone_model">Phone Model</string>
    <string name="field_phone_make">Phone Make</string>
    <string name="field_radio_male">Male</string>
    <string name="field_radio_female">Female</string>
    <string name="button_register">Register</string>
    <string name="label_text"> Welcome to Voice It Click on Next  </string>
    <string name="title_activity_earnings">Earnings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pricingpolicy">Pricing Policy</string>

</resources>
